--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
 
     </div>
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/HBD_CAS/main.css">
 
   </body>
 </html>
