--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <div class="container">
 
 
-    <h1 id="hbd">Happy Birthday Colin!</h1>
+    <h1 id="hbd">Happy Birthday</h1>
+    <h1 id="hbd">Colin!</h1>
     </div>
 
     </div>
