--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Happy Birthday Colin!</title>
+    <title>Happy Birthday Dad!</title>
   </head>
   <body>
     <div class="wrapper">
@@ -10,7 +10,7 @@
 
 
     <h1 id="hbd">Happy Birthday</h1>
-    <h1 id="hbd">Colin!</h1>
+    <h1 id="hbd">Dad!</h1>
     </div>
 
     </div>
